# re-tool

./: .gitignore  1.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  db.ts  流程.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: agent.rs  ai.rs  apk.rs  app.rs  device.rs  file.rs  frida.rs  mod.rs  network.rs  scrcpy.rs  unidbg.rs  weblab.rs
src-tauri/templates/unidbg_server/: UnidbgServerApplication.java
src-tauri/templates/unidbg_server/controller/: UnidbgController.java
src-tauri/templates/unidbg_server/core/: AbstractUnidbgWorker.java
src-tauri/templates/unidbg_server/service/: UnidbgService.java
src/components/: Sidebar.tsx
src/data/: mock.ts
src/services/: agentService.ts  aiService.ts  deviceService.ts
src/types/: index.ts
src/utils/: protobufDecoder.ts
src/views/AiChatPage/: index.tsx  流程.js
src/views/ApkBuilder/: index.tsx
src/views/CodeConverter/: index.tsx
src/views/DeviceManager/: AppDrawer.tsx  FridaConsole.tsx  PackerViewer.tsx  SoViewer.tsx  index.tsx
src/views/DeviceScreen/: index.tsx
src/views/FileExplorer/: index.tsx
src/views/JavaAnalyzer/: index.tsx
src/views/JsRe/AstLab/: index.tsx
src/views/JsRe/BrowserHome/: index.tsx
src/views/JsRe/Captcha/: index.tsx
src/views/NetworkSniffer/: index.tsx
src/views/PackerLab/: index.tsx
src/views/ScriptLab/: AiGeneratorModal.tsx  index.tsx
src/views/UnidbgKab/: index.tsx
src/views/WebLab/: index.tsx
(+2 files in other folders)
