[package]
name = "re-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "re_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
tauri-plugin-dialog = "2"
xz2 = "0.1"
tempfile = "3.8"
directories = "5.0"  # 用于获取系统标准目录(如Downloads)
open = "5.0"         # 用于打开文件管理器
walkdir = "2.3"  # 高效的文件遍历
rayon = "1.7"    # 并行计算库
zip = "0.6"
mdns-sd = "0.9"
tauri-plugin-shell = "2.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] } # 推荐使用最新版
tokio = { version = "1", features = ["full"] } # Tauri v2 通常自带，确认一下
base64 = "0.22"
